# PracticaBDD

./: README.md
Test Funcionales/: README.md  pyproject.toml
Test Funcionales/features/: environment.py  features.feature
Test Funcionales/features/steps/: steps.py
fizzbuzz/: pyproject.toml
